--- a/cv.css
+++ b/cv.css
@@ -268,6 +268,10 @@ h3 {
   font-weight: 600;
   line-height: 28px;
 }
+.printer-only{
+  display: none;
+}
+
 @media screen and (max-width: 1150px) {
   .name {
     color: #fff;
@@ -278,3 +282,19 @@ h3 {
     line-height: 48px;
   }
 } 
+
+@media print {
+  .page {
+    width: 100%;
+    margin: 0;
+    max-width: 5000px;
+  }
+  .printer-only {
+    display: block;
+    page-break-before: always;
+    margin-top: 20px;
+  }
+  body {
+    zoom: 80%; 
+  }
+}
